# actix-error

./: .gitignore  Cargo.toml  README.md
actix-api-error-derive/: Cargo.toml
actix-api-error-derive/src/: lib.rs
actix-error-derive/: Cargo.toml
actix-error-derive/src/: json.rs  lib.rs  po.rs
locales/: en.po  fr.po  messages.json
resterror-derive/: Cargo.toml
resterror-derive/src/: json.rs  lib.rs  po.rs
src/: lib.rs  translate.rs
tests/: test.rs
