[package]
name = "actix-error"
authors = ["Dimitri Timoz <dimitri.timoz@protonmail.com>, INSAgenda <devs@insagenda.fr>"]
repository = "https://github.com/INSAgenda/resterror"
description = "A simple library to handle REST errors, with a derive macro to generate the error type. It also provides a compatibility layer with actix-web."
version = "0.2.11"
edition = "2021"
readme = "README.md"
license = "MIT"
categories = ["web-programming::http-server", "web-programming", "value-formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]

[dependencies]
actix-web = "4.11" 
actix-error-derive = { version = "0.2.11", path = "actix-error-derive" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

[dev-dependencies]
proc-macro2 = { version = "1.0" }
thiserror = "2.0"
