[package]
name = "actix-error-derive"
authors = ["Dimitri Timoz <dimitri.timoz@protonmail.com>, INSAgenda <devs@insagenda.fr>"]
repository = "https://github.com/INSAgenda/resterror"
description = "A simple library to handle REST errors, with a derive macro to generate the error type. It also provides a compatibility layer with actix-web."
version = "0.2.8"
edition = "2021"
readme = "../README.md"
license = "MIT"
categories = ["web-programming::http-server", "web-programming", "value-formatting"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
darling = "0.20"
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }
actix-web = { version = "4.11" }
convert_case = "0.8"
serde = { version = "1.0" }

[features]
